--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ChatActivity"
+                  android:windowSoftInputMode="stateHidden|stateUnchanged"/>
         <activity android:name=".MainActivity"></activity>
     </application>
 
