优化点击事件与加入新界面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,7 @@
             android:windowSoftInputMode="stateHidden|stateUnchanged"/>
         <activity android:name=".MainActivity"/>
         <activity android:name=".GroupActivity"/>
+        <activity android:name=".PersonalActivity"/>
     </application>
 
 </manifest>
