--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,8 @@
         <activity android:name=".MainActivity"/>
         <activity android:name=".GroupActivity"/>
         <activity android:name=".PersonalActivity"/>
+        <activity android:name=".AddressActivity"/>
+        <activity android:name=".PersonalSettingActivity"/>
     </application>
 
 </manifest>
