后续界面补充->人员选择与车辆选择，车队设置界面，新朋友，车队界面（人员与车辆调度还未做）

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,14 @@
                   android:windowSoftInputMode="stateHidden|stateUnchanged"/>
         <activity android:name=".CarGroupActivity"
                   android:windowSoftInputMode="stateHidden|stateUnchanged"/>
+        <activity android:name=".NewFriendActivity"
+                  android:windowSoftInputMode="stateHidden|stateUnchanged"/>
+        <activity android:name=".ShowCarGroupActivity"/>
+        <activity android:name=".CarGroupSettingActivity"/>
+        <activity android:name=".GroupMemberActivity"/>
+        <activity android:name=".PersonSelectActivity"
+                  android:windowSoftInputMode="stateHidden|stateUnchanged"/>
+        <activity android:name=".CarSelectActivity"/>
     </application>
 
 </manifest>
