--- a/springactionmenu/build.gradle
+++ b/springactionmenu/build.gradle
@@ -1,16 +1,17 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 24
     buildToolsVersion "25.0.0"
+
     defaultConfig {
-        7
-        applicationId "com.example.tr.tourhear"
         minSdkVersion 17
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
+
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
     }
     buildTypes {
         release {
@@ -18,27 +19,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    sourceSets {
-        main {
-            jniLibs.srcDir(['libs'])
-        }
-    }
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
-    compile 'com.github.wangjiegulu:AndroidBucket:1.0.4'
-    compile 'com.github.wangjiegulu:AndroidInject:1.0.5'
-
-    compile 'com.github.wangjiegulu:ShadowViewHelper:1.0.0'
     testCompile 'junit:junit:4.12'
-    compile files('libs/Msc.jar')
-    compile project(':library')
-    compile project(':springactionmenu')
-
 }
