--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion "25.0.0"
+    buildToolsVersion "25.0.3"
     defaultConfig {
         7
         applicationId "com.example.tr.tourhear"
@@ -31,11 +31,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
-    compile 'com.github.wangjiegulu:AndroidBucket:1.0.4'
-    compile 'com.github.wangjiegulu:AndroidInject:1.0.5'
-
-    compile 'com.github.wangjiegulu:ShadowViewHelper:1.0.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
     compile files('libs/Msc.jar')
     compile project(':library')
