--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,6 +54,25 @@
     <uses-permission android:name="android.permission.BLUETOOTH"></uses-permission>
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"></uses-permission>
 
+    <!--用于访问网络，网络定位需要上网-->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <!--写入扩展存储，向扩展卡写入数据，用于写入缓存定位数据-->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <!--用于进行网络定位-->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <!--获取运营商信息，用于支持提供运营商信息相关的接口-->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <!--用于访问GPS定位-->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <!--用于读取手机当前的状态-->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <!--用于访问wifi网络信息，wifi信息会用于进行网络定位-->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <!--这个权限用于获取wifi的获取权限，wifi信息会用来进行网络定位-->
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <!--这个权限用于允许程序在手机屏幕关闭后后台进程仍然运行-->
+    <user-permission android:name="android.permission.WAKE_LOCK"/>
+
     <uses-feature
         android:name="android.hardware.wifi"
         android:required="true"/>
@@ -71,8 +90,8 @@
 
         <meta-data
             android:name="com.amap.api.v2.apikey"
-            android:value="bea6b69ef024b035b15f7be40dff32ea"/>
-        <!--e9391f447afbc3110c8378e2e34ec014 -->
+            android:value="e9391f447afbc3110c8378e2e34ec014"/>
+        <!--bea6b69ef024b035b15f7be40dff32ea -->
         <!-- 定位需要的服务 使用2.0的定位需要加上这个 -->
         <service android:name="com.amap.api.location.APSService" />
         <activity
@@ -124,6 +143,7 @@
         <activity android:name=".ChatGroupSettingActivity"/>
         <activity android:name=".PersonDispatchMapActivity"/>
         <activity android:name=".CarDispatchMapActivity"/>
+        <activity android:name=".CarGroupMapActivity"/>
 
         <service android:name="com.algebra.sdk.Controller"/>
         <service android:name="com.amap.api.location.APSService"></service>
